site/content/docs/4.5/about/overview.md
---
layout: docs
title: Информация
description: Узнайте больше о команде, поддерживающей Bootstrap, о том, как и почему начался проект, и как принять участие.
group: about
aliases:
  - "/about/"
  - "/docs/4.5/about/"
---

## Команда

Bootstrap поддерживается [небольшой командой разработчиков](https://github.com/orgs/twbs/people) на GitHub. Мы активно стремимся расширить эту команду и будем рады услышать от Вас, если Вы заинтересованы в масштабировании CSS, написании и поддержке ванильных плагинов JavaScript, а также улучшении процессов сборки инструментов для внешнего кода.

## История

Первоначально созданный дизайнером и разработчиком в Twitter, Bootstrap стал одним из самых популярных интерфейсных фреймворков и проектов с открытым исходным кодом в мире.

Bootstrap был создан в Twitter в середине 2010 года авторами [@mdo](https://twitter.com/mdo) и [@fat](https://twitter.com/fat). До того, как стать фреймворком с открытым исходным кодом, Bootstrap назывался _Twitter Blueprint_. Через несколько месяцев после начала разработки Twitter провел свой [первый Hack Week](https://blog.twitter.com/engineering/en_us/a/2010/hack-week.html) и проект взорвался, поскольку разработчики всех уровней подготовки взлетели без какого-либо внешнего руководства. Он служил руководством по стилю для разработки внутренних инструментов в компании более года до его публичного выпуска и продолжает это делать сегодня.

Первоначально [выпущено](https://blog.twitter.com/developer/en_us/a/2011/bootstrap-twitter.html) в <time datetime="2011-08-19 11:25">пятницу, 19 августа, 2011</time>, с тех пор у нас было более [двадцати релизов]({{< param repo >}}/releases), в том числе два крупных переписывания с v2 и v3. В Bootstrap 2 мы добавили адаптивную функциональность ко всему фреймворку в виде дополнительной таблицы стилей. Опираясь на это с помощью Bootstrap 3, мы еще раз переписали библиотеку, чтобы она по умолчанию реагировала на мобильные устройства.

В Bootstrap 4 мы снова переписали проект, чтобы учесть два ключевых архитектурных изменения: переход на Sass и переход на flexbox CSS. Наше намерение состоит в том, чтобы немного помочь продвинуть сообщество веб-разработчиков вперед, продвигая новые свойства CSS, меньшее количество зависимостей и новые технологии в более современных браузерах.

## Принять участие

Примите участие в разработке Bootstrap, [открыв проблему]({{< param repo >}}/issues/new) или отправив pull request. Прочтите наши [правила участия]({{< param repo >}}/blob/v{{< param current_version >}}/.github/CONTRIBUTING.md) для получения информации о том, как мы развиваемся.
