site/content/docs/5.0/about/overview.md
---
layout: docs
title: О нас
description: Узнайте больше о команде, поддерживающей Bootstrap, о том, как и почему проект начался, и как принять участие.
group: about
aliases:
  - "/about/"
  - "/docs/5.0/about/"
---

## Команда

Bootstrap поддерживается [небольшой командой разработчиков](https://github.com/orgs/twbs/people) на GitHub. Мы активно стремимся расширить эту команду и будем рады услышать от Вас, если Вы заинтересованы в масштабировании CSS, написании и поддержке ванильных плагинов JavaScript, а также улучшении процессов создания инструментов для фронтенд кода.

## История

Первоначально созданный дизайнером и разработчиком в Twitter, Bootstrap стал одним из самых популярных интерфейсных фреймворков и проектов с открытым исходным кодом в мире.

Bootstrap был создан в Twitter в середине 2010 г. [@mdo](https://twitter.com/mdo) и [@fat](https://twitter.com/fat). До того, как стать фреймворком с открытым исходным кодом, Bootstrap был известен как _Twitter Blueprint_. Через несколько месяцев после начала разработки Twitter провел свою [первую Hack Week](https://blog.twitter.com/engineering/en_us/a/2010/hack-week.html), и проект стал взрывным, поскольку разработчики всех уровней подготовки вмешались без какого-либо внешнего руководства. Он служил руководством по стилю для разработки внутренних инструментов в компании более года до его публичного выпуска и продолжает это делать сегодня.

Первоначально [выпущен](https://blog.twitter.com/developer/en_us/a/2011/bootstrap-twitter.html) в <time datetime="2011-08-19 11:25">Пятницу, Август 19, 2011</time>, у нас с тех пор было больше [двадцати релизов]({{< param repo >}}/releases), включая два основных переписывания с v2 и v3. В Bootstrap 2 мы добавили адаптивную функциональность ко всему фреймворку в качестве дополнительной таблицы стилей. Опираясь на это с помощью Bootstrap 3, мы еще раз переписали библиотеку, чтобы она по умолчанию реагировала на мобильные устройства.

В Bootstrap 4 мы снова переписали проект, чтобы учесть два ключевых архитектурных изменения: переход на Sass и переход на flexbox CSS. Наше намерение состоит в том, чтобы немного помочь продвинуть сообщество веб-разработчиков вперед, продвигая новые свойства CSS, меньшее количество зависимостей и новые технологии в более современных браузерах.

Наш последний выпуск, Bootstrap 5 (в настоящее время находится в разработке), фокусируется на улучшении кодовой базы v4 с минимальным количеством серьезных критических изменений. Мы улучшили существующие функции и компоненты, удалили поддержку старых браузеров, отказались от jQuery в пользу JavaScript и внедрили более перспективные технологии, такие как настраиваемые свойства CSS, как часть нашего инструментария.

## Принять участие

Примите участие в разработке Bootstrap [открыв issue]({{< param repo >}}/issues/new) или отправив pull request. Прочтите наши [правила участия]({{< param repo >}}/blob/v{{< param current_version >}}/.github/CONTRIBUTING.md) для получения информации о том, как мы развиваемся.
